--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.13.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongo-seeding": "^3.7.1",
     "mongoose": "^6.2.8",
